[tool.poetry]
name = "railway-live"
version = "0.1.0"
description = ""
authors = ["Johannes Gutekunst <johannes.gutekunst@t-online.de>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">3.8, <3.12"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"
vtk = "^9.2.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.17.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
